fix overflow on 404

--- a/styles/404.module.css
+++ b/styles/404.module.css
@@ -2,6 +2,7 @@
   width: clamp(280px, 60%, 1000px);
   margin: auto;
   position: relative;
+  overflow: hidden;
 }
 .notFoundText {
   width: fit-content;
